容器化改造/services/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
      - name: tcr-internal-credentials
      containers:
      - name: petclinic
        image: ${TCR_IMAGE_FQIN}  # 使用变量占位符
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
